<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Pantalla3">

    <EditText
        android:id="@+id/etFechaInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/fecha_inicio"
        android:inputType="text" />

    <EditText
        android:id="@+id/etFechaFin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/fecha_fin"
        android:inputType="text" />

    <Button

        android:id="@+id/btnFiltrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filtrar"
        android:onClick="consultar"/>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="top">

    </WebView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtResultados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultados" />
    </ScrollView>

</LinearLayout>