<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pantalla2">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="140dp"
        android:layout_height="111dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:checkedButton="@id/Otra"
        app:layout_constraintBottom_toTopOf="@+id/etNuevaNota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <RadioButton
            android:id="@+id/Tareas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tareas" />

        <RadioButton
            android:id="@+id/Otra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otra" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="32dp"
        android:text="@string/categoria"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNuevaNota"
        android:layout_width="371dp"
        android:layout_height="392dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/introducir_nueva_nota"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="366dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="Enviar"
        android:text="@string/guardar_nota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFecha" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="357dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Inserte la fecha: yyyy-mm-dd"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNuevaNota" />

</androidx.constraintlayout.widget.ConstraintLayout>